# spooled-backend

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docker/: docker-compose.yml
docker/grafana/dashboards/: spooled-overview.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: datasources.yml
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml  spooled-rules.yml
docs/: openapi.yaml
docs/guides/: api-usage.md  architecture.md  deployment.md  getting-started.md  operations.md  quickstart.md
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  pgbouncer.yaml  redis.yaml  secrets.yaml.template  service.yaml  serviceaccount.yaml
k8s/overlays/development/: kustomization.yaml
k8s/overlays/production/: kustomization.yaml
loadtest/: README.md  k6-load-test.js  run-perf-baseline.sh  simple-load-test.sh
migrations/: 20241209000001_initial_schema.sql  20241209000002_partition_strategy.sql  20241209000003_job_dependencies.sql  20241209000004_schedules.sql  20241209000005_api_key_prefix.sql  20241209000006_worker_queue_names.sql  20241209000007_worker_column_aliases.sql  20241209000008_autovacuum_tuning.sql  20241209000009_partitioned_jobs.sql  20241209000010_outgoing_webhooks.sql  20241209000011_organization_usage.sql  20241212000001_fix_org_resource_counts.sql  20241212000002_custom_limits.sql
scripts/: backup_database.sh  partition_maintenance.sh  verify_backup.sh
src/: lib.rs  main.rs
src/api/: mod.rs  pagination.rs
src/api/handlers/: admin.rs  api_keys.rs  auth.rs  health.rs  jobs.rs  metrics.rs  mod.rs  organizations.rs  outgoing_webhooks.rs  queues.rs  realtime.rs  schedules.rs  webhooks.rs  workers.rs  workflows.rs
src/api/middleware/: admin_auth.rs  auth.rs  limits.rs  mod.rs  rate_limit.rs  security.rs  validation.rs  versioning.rs
src/cache/: mod.rs
src/config/: mod.rs  plans.rs
src/db/: mod.rs
src/error/: mod.rs
src/grpc/: mod.rs  service.rs  types.rs
src/models/: api_key.rs  job.rs  mod.rs  organization.rs  queue_config.rs  schedule.rs  webhook.rs  worker.rs  workflow.rs
src/observability/: mod.rs  tracing_config.rs
src/queue/: mod.rs
src/scheduler/: mod.rs
src/webhook/: mod.rs
src/worker/: mod.rs
tests/: admin_tests.rs  api_tests.rs  endpoint_tests.rs  integration_tests.rs  production_tests.rs  real_api_tests.rs  security_tests.rs
tests/common/: mod.rs
